--- a/Dub/Dub.Web.Core/project.json
+++ b/Dub/Dub.Web.Core/project.json
@@ -1,31 +1,47 @@
 ﻿{
-  "version": "0.4.0",
-  "description": "The Core library for the Dub project",
-  "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
+    "version": "0.5.0",
+    "description": "The Core library for the Dub project",
+    "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
+    "tags": [ "" ],
+    "projectUrl": "",
+    "licenseUrl": "",
 
-  "dependencies": {
-    "EntityFramework.Core": "7.0.0-beta7-13841"
-  },
-  "compilationOptions": {
-    "define": [ "NETCORE" ]
-  },
+    "dependencies": {
+    },
 
-  "frameworks" : {
-    "dnx451": { },
-    "dnxcore50" : {
-      "dependencies": {
-        "Microsoft.CSharp": "4.0.0-beta-23029",
-        "System.Collections": "4.0.10",
-        "System.Linq": "4.0.0",
-        "System.Runtime": "4.0.20",
-        "System.Runtime.Extensions": "4.0.10",
-        "System.Security.Claims": "4.0.0-beta-23029",
-        "System.Threading": "4.0.10",
-        "System.Diagnostics.Tools": "4.0.0"
-      }
+    "frameworks": {
+        "net45": {
+            "frameworkAssemblies": {
+                "Microsoft.CSharp": "4.0.0",
+                "System.Data": "4.0.0"
+            },
+            "dependencies": {
+                "EntityFramework": "6.1.3"
+            }
+        },
+        "dnx451": {
+            "compilationOptions": {
+                "define": [ "NETCORE" ]
+            },
+            "dependencies": {
+                "EntityFramework.Core": "7.0.0-beta7-13877"
+            }
+        },
+        "dnxcore50": {
+            "compilationOptions": {
+                "define": [ "NETCORE" ]
+            },
+            "dependencies": {
+                "EntityFramework.Core": "7.0.0-beta7-13877",
+                "Microsoft.CSharp": "4.0.0",
+                "System.Collections": "4.0.10",
+                "System.Linq": "4.0.0",
+                "System.Runtime": "4.0.20",
+                "System.Runtime.Extensions": "4.0.10",
+                "System.Security.Claims": "4.0.0",
+                "System.Threading": "4.0.10",
+                "System.Diagnostics.Tools": "4.0.0"
+            }
+        }
     }
-  }
 }
