--- a/Dub/Dub.Web.Identity/project.json
+++ b/Dub/Dub.Web.Identity/project.json
@@ -1,34 +1,58 @@
 ﻿{
-  "version": "0.4.0",
-  "description": "The Core library for the Dub project",
-  "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
-  "tags": [ "" ],
-  "projectUrl": "",
-  "licenseUrl": "",
+    "version": "0.5.0",
+    "description": "The Core library for the Dub project",
+    "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
+    "tags": [ "" ],
+    "projectUrl": "",
+    "licenseUrl": "",
 
-  "dependencies": {
-    "EntityFramework.Core": "7.0.0-beta7-13844",
-    "Dub.Web.Core": "",
-    "Microsoft.AspNet.Identity": "3.0.0-beta7-12779",
-    "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-12779",
-    "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-11623"
-  },
-  "compilationOptions": {
-    "define": [ "NETCORE" ]
-  },
+    "dependencies": {
+        "Dub.Web.Core": ""
+    },
 
-  "frameworks" : {
-    "dnx451": { },
-    "dnxcore50" : {
-      "dependencies": {
-        "Microsoft.CSharp": "4.0.0",
-        "System.Collections": "4.0.10",
-        "System.Linq": "4.0.0",
-        "System.Runtime": "4.0.20",
-        "System.Security.Claims": "4.0.0",
-        "System.Threading": "4.0.10",
-        "System.Diagnostics.Tools": "4.0.0"
-      }
+    "frameworks": {
+        "net45": {
+            "frameworkAssemblies": {
+                "System.Configuration": "4.0.0.0"
+            },
+            "dependencies": {
+                "CommonMark.NET": "0.9.1",
+                "EntityFramework": "6.1.3",
+                "Microsoft.AspNet.Identity.Core": "2.2.1",
+                "Microsoft.AspNet.Identity.EntityFramework": "2.2.1"
+            }
+        },
+        "dnx451": {
+            "compilationOptions": {
+                "define": [ "NETCORE" ]
+            },
+            "dependencies": {
+
+                "EntityFramework.Core": "7.0.0-beta7-13844",
+                "Microsoft.AspNet.Identity": "3.0.0-beta7-12779",
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-12779",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-11623"
+            }
+        },
+        "dnxcore50": {
+            "compilationOptions": {
+                "define": [ "NETCORE" ]
+            },
+            "dependencies": {
+
+                "EntityFramework.Core": "7.0.0-beta7-13844",
+                "Microsoft.AspNet.Identity": "3.0.0-beta7-12779",
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-12779",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-11623",
+
+                "Microsoft.CSharp": "4.0.0",
+                "System.Collections": "4.0.10",
+                "System.Linq": "4.0.0",
+                "System.Runtime": "4.0.20",
+                "System.Security.Claims": "4.0.0",
+                "System.Threading": "4.0.10",
+                "System.Diagnostics.Tools": "4.0.0"
+            }
+        }
     }
-  }
 }
