--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.4.1",
+    "version": "0.5.0",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -7,35 +7,68 @@
     "licenseUrl": "",
 
     "dependencies": {
-        "AutoMapper": "4.0.0-alpha1",
         "Dub.Web.Core": "",
         "Dub.Web.Identity": "",
-        "EntityFramework.Core": "7.0.0-beta7-13844",
-        "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta7-11763",
-        "Microsoft.AspNet.Identity": "3.0.0-beta7-12779",
-        "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-12779",
-        "Microsoft.AspNet.Mvc.Core": "6.0.0-beta7-14369",
-        "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-beta7-14327",
-        "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-11625",
-        "Microsoft.AspNet.Authorization": "1.0.0-beta7-12737",
-        "Microsoft.Owin": "3.0.0",
+        "AutoMapper": "4.0.0-alpha1",
         "Newtonsoft.Json": "7.0.1"
-    },
-    "compilationOptions": {
-        "define": [ "NETCORE" ]
     },
 
     "frameworks": {
-        "dnx451": { },
-        "dnxcore50": {
+        "net45": {
+            "frameworkAssemblies": {
+                "System.Web": "4.0.0.0"
+            },
             "dependencies": {
-                "Microsoft.CSharp": "4.0.0-beta-23015",
+                "EntityFramework": "6.1.3",
+                "Microsoft.AspNet.Identity.Core": "2.2.1",
+                "Microsoft.AspNet.Identity.EntityFramework": "2.2.1",
+                "Microsoft.AspNet.Identity.Owin": "2.2.1",
+                "Microsoft.AspNet.Mvc": "5.2.3",
+                "Microsoft.AspNet.WebApi.Core": "5.2.3",
+                "Microsoft.AspNet.WebApi.Owin": "5.2.3",
+                "Microsoft.Owin.Host.SystemWeb": "3.0.1",
+        "Microsoft.Owin": "3.0.1"
+            }
+        },
+        "dnx451": {
+            "compilationOptions": {
+                "define": [ "NETCORE" ]
+            },
+            "dependencies": {
+
+                "EntityFramework.Core": "7.0.0-beta7-13844",
+                "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta7-11763",
+                "Microsoft.AspNet.Identity": "3.0.0-beta7-12779",
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-12779",
+                "Microsoft.AspNet.Mvc.Core": "6.0.0-beta7-14369",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-beta7-14327",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-11625",
+                "Microsoft.AspNet.Authorization": "1.0.0-beta7-12737",
+        "Microsoft.Owin": "3.0.1"
+            }
+        },
+        "dnxcore50": {
+            "compilationOptions": {
+                "define": [ "NETCORE" ]
+            },
+            "dependencies": {
+
+                "EntityFramework.Core": "7.0.0-beta7-13844",
+                "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta7-11763",
+                "Microsoft.AspNet.Identity": "3.0.0-beta7-12779",
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-12779",
+                "Microsoft.AspNet.Mvc.Core": "6.0.0-beta7-14369",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-beta7-14327",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-11625",
+                "Microsoft.AspNet.Authorization": "1.0.0-beta7-12737",
+
+                "Microsoft.CSharp": "4.0.0",
                 "System.Collections": "4.0.10",
-                "System.Linq": "4.0.0-beta-23029",
+                "System.Linq": "4.0.0",
                 "System.Runtime": "4.0.20",
                 "System.Resources.ResourceManager": "4.0.0",
                 "System.Runtime.Extensions": "4.0.10",
-                "System.Security.Claims": "4.0.0-beta-23015",
+                "System.Security.Claims": "4.0.0",
                 "System.Threading": "4.0.10",
                 "System.Diagnostics.Tools": "4.0.0"
             }
