--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.5.5",
+    "version": "0.5.6",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -57,10 +57,10 @@
                 "Microsoft.CSharp": "4.0.0",
                 "System.Collections": "4.0.10",
                 "System.Linq": "4.0.0",
-                "System.Runtime": "4.0.20",
+                "System.Runtime": "4.0.21-beta-*",
                 "System.Resources.ResourceManager": "4.0.0",
                 "System.Runtime.Extensions": "4.0.10",
-                "System.Security.Claims": "4.0.0",
+                "System.Security.Claims": "4.0.1-beta-*",
                 "System.Threading": "4.0.10",
                 "System.Diagnostics.Tools": "4.0.0"
             }
