--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.6.0",
+    "version": "0.6.1",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -9,7 +9,7 @@
     "dependencies": {
         "Dub.Web.Core": "",
         "Dub.Web.Identity": "",
-        "AutoMapper": "4.0.0-alpha1",
+        "AutoMapper": "4.0.4",
         "Newtonsoft.Json": "7.0.1"
     },
 
@@ -45,7 +45,7 @@
         },
         "dnxcore50": {
             "compilationOptions": {
-                "define": [ "NETCORE" ]
+                "define": [ "NETCORE", "NOMAIL" ]
             },
             "dependencies": {
                 "EntityFramework.Core": "7.0.0-beta7-*",
