--- a/Dub/Dub.Web.Identity/project.json
+++ b/Dub/Dub.Web.Identity/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.6.0",
+    "version": "0.7.0",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -28,9 +28,9 @@
             },
             "dependencies": {
 
-                "EntityFramework.Core": "7.0.0-beta7-*",
-                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-*",
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-*"
+                "EntityFramework.Core": "7.0.0-beta8-*",
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta8",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta8"
             }
         },
         "dnxcore50": {
@@ -39,11 +39,11 @@
             },
             "dependencies": {
 
-                "EntityFramework.Core": "7.0.0-beta7-*",
-                "EntityFramework.SqlServer": "7.0.0-beta7-*",
-                "Microsoft.AspNet.Identity": "3.0.0-beta7-*",
-                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta7-*",
-                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta7-*",
+                "EntityFramework.Core": "7.0.0-beta8-*",
+                "EntityFramework.SqlServer": "7.0.0-beta8",
+                "Microsoft.AspNet.Identity": "3.0.0-beta8",
+                "Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta8",
+                "Microsoft.Framework.Logging.Abstractions": "1.0.0-beta8",
 
                 "Microsoft.CSharp": "4.0.0",
                 "System.Collections": "4.0.10",
