--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.8.0",
+    "version": "0.8.1",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -35,11 +35,11 @@
                 "define": [ "NETCORE" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-*",
-                "Microsoft.AspNet.Http.Abstractions": "1.0.0-*",
-                "Microsoft.AspNet.Mvc.Core": "6.0.0-*",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-*",
-                "Microsoft.AspNet.Authorization": "1.0.0-*",
+                "EntityFramework.Core": "7.0.0-beta8",
+                "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta8",
+                "Microsoft.AspNet.Mvc.Core": "6.0.0-beta8",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-beta8",
+                "Microsoft.AspNet.Authorization": "1.0.0-beta8",
                 "Microsoft.Owin": "3.0.1"
             }
         },
@@ -48,16 +48,15 @@
                 "define": [ "NETCORE", "NOMAIL" ]
             },
             "dependencies": {
-                "EntityFramework.Core": "7.0.0-*",
-                "Microsoft.AspNet.Http.Abstractions": "1.0.0-*",
-                "Microsoft.AspNet.Mvc.Core": "6.0.0-*",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-*",
-                "Microsoft.AspNet.Authorization": "1.0.0-*",
+                "EntityFramework.Core": "7.0.0-beta8",
+                "Microsoft.AspNet.Http.Abstractions": "1.0.0-beta8",
+                "Microsoft.AspNet.Mvc.Core": "6.0.0-beta8",
+                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-beta8",
+                "Microsoft.AspNet.Authorization": "1.0.0-beta8",
 
                 "Microsoft.CSharp": "4.0.0",
                 "System.Collections": "4.0.10",
                 "System.Linq": "4.0.0",
-                "System.Runtime": "4.0.21-beta-*",
                 "System.Resources.ResourceManager": "4.0.0",
                 "System.Runtime.Extensions": "4.0.10",
                 "System.Security.Claims": "4.0.1-beta-*",
