--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,5 +1,5 @@
 ﻿{
-    "version": "0.8.6",
+    "version": "0.8.7",
     "description": "The Core library for the Dub project",
     "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
     "tags": [ "" ],
@@ -48,13 +48,13 @@
             "compilationOptions": {
                 "define": [ "NETCORE", "NOMAIL" ]
             },
-            "dependencies": {
-                "EntityFramework.Core": "7.0.0-rc1-final",
-                "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
-                "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
+          "dependencies": {
+            "EntityFramework.Core": "7.0.0-rc1-final",
+            "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
+            "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
 
-                "System.Security.Claims": "4.0.1-*"
-            }
+            "System.Security.Claims": "4.0.1-beta-23516"
+          }
         },
         "dotnet5.4": {
             "compilationOptions": {
@@ -65,7 +65,7 @@
                 "Microsoft.AspNet.Mvc.ViewFeatures": "6.0.0-rc1-final",
                 "Microsoft.AspNet.Authorization": "1.0.0-rc1-final",
 
-                "System.Security.Claims": "4.0.1-*"
+                "System.Security.Claims": "4.0.1-beta-23516"
             }
         }
     }
