--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -13,7 +13,7 @@
         "Dub.Web.Identity": "0.9.0",
         "Dub.Web.Dto": "0.9.0",
         "AutoMapper": "4.1.1",
-        "Newtonsoft.Json": "8.0.3"
+        "Newtonsoft.Json": "8.0.4-beta1"
     },
 
   "frameworks": {
