--- a/Dub/Dub.Web.Core/project.json
+++ b/Dub/Dub.Web.Core/project.json
@@ -1,35 +1,26 @@
 ﻿{
-  "version": "0.9.0",
+  "version": "1.0.0",
   "description": "The Core library for the Dub project",
   "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
   "packOptions": {
     "licenseUrl": "",
-    "repository": "",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/kant2002/Dub"
+    },
     "tags": [ "" ]
   },
 
   "frameworks": {
-    "net45": {
-      "frameworkAssemblies": {
-        "Microsoft.CSharp": "4.0.0",
-        "System.Data": "4.0.0"
-      },
-      "dependencies": {
-        "EntityFramework": "6.1.3"
-      }
-    },
     "netstandard1.3": {
       "buildOptions": {
         "define": [ "NETCORE" ]
       },
-      "imports": [
-        "portable-net45+win8+wp8"
-      ],
       "dependencies": {
-        "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
-        "System.Security.Claims": "4.0.1-rc2-24027",
-        "System.IO.FileSystem": "4.0.1-rc2-24027",
-        "Microsoft.CSharp": "4.0.1-rc2-24027"
+        "Microsoft.EntityFrameworkCore": "1.0.0",
+        "System.Security.Claims": "4.0.1",
+        "System.IO.FileSystem": "4.0.1",
+        "Microsoft.CSharp": "4.0.1"
       }
     }
   }
