--- a/Dub/Dub.Web.Dto/project.json
+++ b/Dub/Dub.Web.Dto/project.json
@@ -1,27 +1,29 @@
 ﻿{
-  "version": "0.9.0",
+  "version": "1.0.0",
   "description": "Dub.Web.Dto Class Library",
   "authors": [ "kant" ],
   "packOptions": {
     "licenseUrl": "",
-    "repository": "",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/kant2002/Dub"
+    },
     "tags": [ "" ]
   },
 
   "dependencies": {
-    "Dub.Web.Core": "0.9.0"
+    "Dub.Web.Core": {
+      "target": "project",
+      "version": "1.0.0"
+    }
   },
 
   "frameworks": {
-    "net45": { },
     "netstandard1.3": {
-      "imports": [
-        "portable-net45+win8+wp8"
-      ],
       "dependencies": {
-        "System.Diagnostics.Contracts": "4.0.1-rc2-24027",
-        "System.Diagnostics.Tools": "4.0.1-rc2-24027"
+        "System.Diagnostics.Contracts": "4.0.1",
+        "System.Diagnostics.Tools": "4.0.1"
       }
-    }    
+    }
   }
 }
