--- a/Dub/Dub.Web.Identity/project.json
+++ b/Dub/Dub.Web.Identity/project.json
@@ -1,39 +1,31 @@
 ﻿{
-    "version": "0.9.0",
-    "description": "The Core library for the Dub project",
+  "version": "1.0.0",
+  "description": "The Core library for the Dub project",
   "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
   "packOptions": {
     "tags": [ "" ],
-    "repository": "",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/kant2002/Dub"
+    },
     "licenseUrl": ""
   },
 
-    "dependencies": {
-        "Dub.Web.Core": "0.9.0"
-    },
+  "dependencies": {
+    "Dub.Web.Core": {
+      "target": "project",
+      "version": "1.0.0"
+    }
+  },
 
   "frameworks": {
-    "net45": {
-      "frameworkAssemblies": {
-        "System.Configuration": "4.0.0.0"
-      },
-      "dependencies": {
-        "CommonMark.NET": "0.9.1",
-        "EntityFramework": "6.1.3",
-        "Microsoft.AspNet.Identity.Core": "2.2.1",
-        "Microsoft.AspNet.Identity.EntityFramework": "2.2.1"
-      }
-    },
     "netstandard1.3": {
       "buildOptions": {
         "define": [ "NETCORE" ]
       },
-      "imports": [
-        "portable-net45+win8+wp8"
-      ],
       "dependencies": {
-        "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0-rc2-final",
-        "Microsoft.Extensions.Logging.Abstractions": "1.0.0-rc2-final"
+        "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
+        "Microsoft.Extensions.Logging.Abstractions": "1.0.0"
       }
     }
   }
