--- a/Dub/Dub.Web.Mvc/project.json
+++ b/Dub/Dub.Web.Mvc/project.json
@@ -1,39 +1,35 @@
 ﻿{
-    "version": "0.9.0",
+    "version": "1.0.0",
     "description": "The Core library for the Dub project",
   "authors": [ "Andrey Kurdyumov <kant2002@gmail.com>" ],
   "packOptions": {
     "tags": [ "" ],
-    "repository": "",
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/kant2002/Dub"
+    },
     "licenseUrl": ""
   },
-    
-    "dependencies": {
-        "Dub.Web.Core": "0.9.0",
-        "Dub.Web.Identity": "0.9.0",
-        "Dub.Web.Dto": "0.9.0",
-        "AutoMapper": "4.1.1",
-        "Newtonsoft.Json": "8.0.4-beta1"
+
+  "dependencies": {
+    "Dub.Web.Core": {
+      "target": "project",
+      "version": "1.0.0"
     },
+    "Dub.Web.Identity": {
+      "target": "project",
+      "version": "1.0.0"
+    },
+    "Dub.Web.Dto": {
+      "target": "project",
+      "version": "1.0.0"
+    },
+    "AutoMapper": "4.1.1",
+    "Newtonsoft.Json": "9.0.1"
+  },
 
   "frameworks": {
-    "net45": {
-      "frameworkAssemblies": {
-        "System.Web": "4.0.0.0"
-      },
-      "dependencies": {
-        "EntityFramework": "6.1.3",
-        "Microsoft.AspNet.Identity.Core": "2.2.1",
-        "Microsoft.AspNet.Identity.EntityFramework": "2.2.1",
-        "Microsoft.AspNet.Identity.Owin": "2.2.1",
-        "Microsoft.AspNet.Mvc": "5.2.3",
-        "Microsoft.AspNet.WebApi.Core": "5.2.3",
-        "Microsoft.AspNet.WebApi.Owin": "5.2.3",
-        "Microsoft.Owin.Host.SystemWeb": "3.0.1",
-        "Microsoft.Owin": "3.0.1"
-      }
-    },
-    "netstandard1.5": {
+    "netstandard1.6": {
       "buildOptions": {
         "define": [ "NETCORE", "NOMAIL" ]
       },
@@ -41,11 +37,11 @@
         "portable-net45+win8+wp8"
       ],
       "dependencies": {
-        "Microsoft.EntityFrameworkCore": "1.0.0-rc2-final",
-        "Microsoft.AspNetCore.Http.Abstractions": "1.0.0-rc2-final",
-        "Microsoft.AspNetCore.Mvc.Core": "1.0.0-rc2-final",
-        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0-rc2-final",
-        "Microsoft.AspNetCore.Authorization": "1.0.0-rc2-final"
+        "Microsoft.EntityFrameworkCore": "1.0.0",
+        "Microsoft.AspNetCore.Http.Abstractions": "1.0.0",
+        "Microsoft.AspNetCore.Mvc.Core": "1.0.0",
+        "Microsoft.AspNetCore.Mvc.ViewFeatures": "1.0.0",
+        "Microsoft.AspNetCore.Authorization": "1.0.0"
       }
     }
   }
